--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-color: #FFFFFF;
     color: #000000;
     font-family: Arial, sans-serif;
-    margin: 0;
+    margin: 0%;
     padding: 0;
 }
 
@@ -94,14 +94,14 @@ body {
     }
 
     .output-box {
-       width: 220px;
-       margin-right: 10px;
+       width: 130%;
        border: 1px solid #CCCCCC;
        padding: 2px;
        padding-left: 7px;
        background-color: #F0F0F0;
        margin-top: 1px;
        display: flex;
+       justify-content: space-between;
        }
       
 }
