--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
 
 .output-section {
     display: flex;
+    justify-content:flex-start;
   
 }
 
@@ -94,14 +95,13 @@ body {
     }
 
     .output-box {
-       width: 130%;
+       width: 100%;
        border: 1px solid #CCCCCC;
        padding: 2px;
        padding-left: 7px;
        background-color: #F0F0F0;
        margin-top: 1px;
        display: flex;
-       justify-content: space-between;
        }
       
 }
