--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ body {
 
 .input-section, .output-section {
     flex: 1;
-    margin: 10px;
     display: flex;
     margin-top: 1px;
 }
@@ -56,7 +55,7 @@ body {
 
 .output-section {
     display: flex;
-    justify-content:flex-start;
+    justify-content:space-around;
   
 }
 
@@ -90,18 +89,17 @@ body {
         flex-direction: column-reverse;
     }
 
-    .input-section{
-        margin: 0;
+    .output-section{
+        justify-content: flex-start;
     }
 
     .output-box {
        width: 100%;
        border: 1px solid #CCCCCC;
-       padding: 2px;
-       padding-left: 7px;
+       padding-left: 5%;
+       padding-top: 2px;
+       padding-bottom: 2px;
        background-color: #F0F0F0;
-       margin-top: 1px;
-       display: flex;
        }
       
 }
