--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
   
 }
 
-.output-box {
+/*.output-box {
     margin: 10px;
     margin-top: 5px;
     width: 280px;
@@ -67,7 +67,7 @@ body {
     padding: 10px;
     background-color: #F0F0F0;
 }
-
+*/
 .highlight {
     color: #007BFF;
     font-weight: bold;
@@ -90,10 +90,10 @@ body {
     }
 
     .output-section{
-        justify-content: flex-start;
+        justify-content: space-evenly;
     }
 
-    .output-box {
+    /* .output-box {
        width: 100%;
        border: 1px solid #CCCCCC;
        padding-left: 5%;
@@ -101,5 +101,5 @@ body {
        padding-bottom: 2px;
        background-color: #F0F0F0;
        }
-      
+       */
 }
